tests/invalid/parser/expected_block.err.out
tests/invalid/parser/expected_block.err.ri:5:18: error: expected block, found number `1`
      | 
    5 |     while (true) 1; // fail
      |                  ^         
      = help: if you want to write a single-statement, use `:`: `if (is_online): player.kick()`
error: could not compile `expected_block` module, aborting due to previous error